--- a/src/components/jobList/JobList.css
+++ b/src/components/jobList/JobList.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  cursor: pointer;
 }
 
 .jobList {
@@ -12,7 +12,8 @@
   font-family: bold;
   margin-top: 20px;
   text-decoration: underline;
-  
+  cursor: pointer;
+
 }
 
 .jobList:hover {
@@ -30,14 +31,33 @@
 .bookmark:hover {
   transform: scale(1.02);
 }
+
+
 .bookmarked-job {
   background-color: hsl(41, 68%, 48%);
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
+  opacity: 2;
+  transform: translateX(0);
+  transition: opacity 300ms, transform 300ms;
 }
 .bookmarked-job:hover {
   transform: scale(1.02);
+}
+
+.Trash-job{
+  transition: transform 1ms ;
+  opacity: 2;
+  transform: translateX(1);
+  transition: opacity 300ms, transform 300ms;
+  background-color: #e8f5e9;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.Trash-job:hover{
+
+  transform: scale1(1.02);
 }
 
 .job-card {
@@ -48,6 +68,7 @@
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
+  cursor: pointer;
 }
 
 .job-card:hover {
@@ -58,6 +79,7 @@
   margin-top: 20px;
   font-size: 14px;
   color: #080808;
+  cursor: pointer;
 }
 .swipe-info:hover {
   transform: scale(1.02);
@@ -77,12 +99,14 @@
 }
 
 
-
-
-
-
 .bookmarked-job {
   background-color: #e8f5e9;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+}
+.Trash-job {
+  background-color: #f30337;
   padding: 10px;
   margin-bottom: 10px;
   border-radius: 8px;
@@ -96,7 +120,7 @@
 }
 
 
-  
+
 @media (max-width: 600px) {
   .job-card {
     width: 100%;
